# assethero

./: .gcloudignore  Dockerfile  agui_app.py  api.py  api_app.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt  web_app.py
.github/workflows/: deploy.yml
agents/: paper_trade_agent.py  reconcile_agent.py  report_agent.py
docs/: DEPLOY.md
engine/: __init__.py  auth.py  integrations.py
engine/ai/: chat_store.py
engine/backtest/: __init__.py  artifacts.py  data.py  engine.py  fills.py  metrics.py  runner.py  strategies.py  tuner.py
engine/backtest/skills/trading-api-backtest/: LICENSE  SKILL.md  reference.md
engine/brokers/: ccxt_broker.py  hyperliquid_broker.py  polymarket_broker.py
engine/feeds/: ccxt_feed.py  tomorrowio_feed.py  visualcrossing_feed.py
engine/web/: __init__.py  admin.py  commands.py  landing.py  layout.py
scripts/: deploy_gcp.sh  paper_smoke.py  secrets.env.example
sql/: assethero_schema.sql  crypto_tables.sql  fx_tables.sql  prediction_tables.sql
tests/: regression_suite.py
tui/: command_processor.py  strategy_cli.py
utils/: agent_storage.py  equity_chart.py
verticals/: __init__.py
verticals/crypto/: __init__.py  backtest.py  config.py  paper.py  routes.py  strategies.py
verticals/equities/: __init__.py  routes.py
verticals/fx/: __init__.py  backtest.py  chat.py  config.py  market_data.py  news.py  routes.py
verticals/prediction/: __init__.py  backtest.py  paper.py  routes.py  strategy.py
