[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assethero"
version = "0.2.0"
description = "Multi-asset trading platform — shared backtesting & paper-trading engine across equities, crypto, FX, and prediction markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AssetHero", email = "info@assethero.dev" },
]
keywords = ["trading", "backtesting", "paper-trading", "equities", "crypto", "forex", "prediction-markets", "alpaca", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.0",
    "yfinance>=0.2",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "openai>=1.0",
    "alpaca-py>=0.20",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
web = [
    "python-fasthtml>=0.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "bcrypt>=4.0",
    "cryptography>=41.0",
    "PyJWT>=2.8",
]
agents = [
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "langchain-core>=0.2",
]
agui = [
    "pydantic-ai>=1.34",
    "ag-ui-protocol>=0.1",
]
all = ["assethero[web,agents,agui]"]

[project.urls]
Homepage = "https://assethero.dev"
Repository = "https://github.com/predictivelabsai/assethero"

[project.scripts]
assethero = "cli:main"
alpatrade = "cli:main"  # deprecated alias, kept for backward compatibility

[tool.setuptools]
py-modules = ["cli", "web_app", "agui_app"]

[tool.setuptools.packages.find]
include = [
    "engine",
    "engine.*",
    "tui",
    "tui.*",
    "utils",
    "utils.*",
    "agents",
    "agents.*",
    "tasks",
    "config",
    "scripts",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.png", "*.sh"]
